--- a/WaterMarkCam/LogoSizeSettingViewController.xib
+++ b/WaterMarkCam/LogoSizeSettingViewController.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
@@ -20,7 +19,7 @@
                     <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <items>
-                        <navigationItem title="位置調整" id="5">
+                        <navigationItem title="Positioning" id="5">
                             <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="10">
                                 <connections>
                                     <action selector="cancelSetting:" destination="-1" id="12"/>
